additional_task_1
Батчевая асинхронная запись в БД.
Когда дёргаем ручку добавления в `API`, происходит запись в Kafka, а консьюмер считывает пакетами и записывает в БД
