# pkg/ocp-offer-api/ocp-offer-api.pb.validate.go
@@ -568,6 +568,164 @@ var _ interface {
 	ErrorName() string
 } = MultiCreateOfferV1ResponseValidationError{}
 
+// Validate checks the field values on TaskMultiCreateOfferV1Request with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *TaskMultiCreateOfferV1Request) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	for idx, item := range m.GetOffers() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return TaskMultiCreateOfferV1RequestValidationError{
+					field:  fmt.Sprintf("Offers[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if m.GetBatchSize() <= 0 {
+		return TaskMultiCreateOfferV1RequestValidationError{
+			field:  "BatchSize",
+			reason: "value must be greater than 0",
+		}
+	}
+
+	return nil
+}
+
+// TaskMultiCreateOfferV1RequestValidationError is the validation error
+// returned by TaskMultiCreateOfferV1Request.Validate if the designated
+// constraints aren't met.
+type TaskMultiCreateOfferV1RequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e TaskMultiCreateOfferV1RequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e TaskMultiCreateOfferV1RequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e TaskMultiCreateOfferV1RequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e TaskMultiCreateOfferV1RequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e TaskMultiCreateOfferV1RequestValidationError) ErrorName() string {
+	return "TaskMultiCreateOfferV1RequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e TaskMultiCreateOfferV1RequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sTaskMultiCreateOfferV1Request.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = TaskMultiCreateOfferV1RequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = TaskMultiCreateOfferV1RequestValidationError{}
+
+// Validate checks the field values on TaskMultiCreateOfferV1Response with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *TaskMultiCreateOfferV1Response) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	return nil
+}
+
+// TaskMultiCreateOfferV1ResponseValidationError is the validation error
+// returned by TaskMultiCreateOfferV1Response.Validate if the designated
+// constraints aren't met.
+type TaskMultiCreateOfferV1ResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e TaskMultiCreateOfferV1ResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e TaskMultiCreateOfferV1ResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e TaskMultiCreateOfferV1ResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e TaskMultiCreateOfferV1ResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e TaskMultiCreateOfferV1ResponseValidationError) ErrorName() string {
+	return "TaskMultiCreateOfferV1ResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e TaskMultiCreateOfferV1ResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sTaskMultiCreateOfferV1Response.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = TaskMultiCreateOfferV1ResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = TaskMultiCreateOfferV1ResponseValidationError{}
+
 // Validate checks the field values on DescribeOfferV1Request with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, an error is returned.
